# discover-sync

./: .replit  main.py  pyproject.toml  replit.nix
static/css/: styles.css
static/js/: app.js
templates/: index.html
